RESOLVED FIXED231430
[WPE][Qt] API export fixes
https://bugs.webkit.org/show_bug.cgi?id=231430
Summary [WPE][Qt] API export fixes
Philippe Normand
Reported 2021-10-08 07:40:10 PDT
Attachments
Patch (11.33 KB, patch)
2021-10-08 07:42 PDT, Philippe Normand
ews-feeder: commit-queue-
Philippe Normand
Comment 1 2021-10-08 07:42:44 PDT
EWS
Comment 2 2021-10-08 08:33:28 PDT
Committed r283802 (242695@main): <https://commits.webkit.org/242695@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440610 [details].
Michael Catanzaro
Comment 3 2021-10-08 08:56:32 PDT
commit-queue would be a lot more useful if it actually failed when the build is broken. :(
WebKit Commit Bot
Comment 4 2021-10-08 08:57:32 PDT
Re-opened since this is blocked by bug 231434
Michael Catanzaro
Comment 5 2021-10-08 09:00:12 PDT
Closing this again. I'm going to revert only the change to TextChecker since the QtWPE API changes are all fine. We can figure out what's going wrong with TextChecker in bug #222860. FWIW the error is: GenerateTAPI /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/WebKit.framework/WebKit.tbd normal x86_64 cd /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/Source/WebKit export PATH="/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/usr/bin:/Applications/Xcode.app/Contents/Developer/usr/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin" /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/tapi installapi -verify-against /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/WebKit.framework/WebKit --verify-mode=Pedantic -target x86_64-apple-ios14.5-simulator -install_name /System/Library/Frameworks/WebKit.framework/WebKit -compatibility_version 1 -current_version 613.1.5 -reexport_framework WebKitLegacy -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator14.5.sdk -F/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator -F/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/Source/WebKit/../../WebKitLibraries/WebKitPrivateFrameworkStubs/iOS/14 -iframework /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator14.5.sdk/System/Library/PrivateFrameworks -iframework /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator14.5.sdk/System/Library/Frameworks -L/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator -L/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator14.5.sdk/System/Library/PrivateFrameworks/WebCore.framework/Frameworks -I/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/include -I/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include -I/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/WebCore.framework/PrivateHeaders/ForwardingHeaders -I/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/DerivedSources/WebKit2 -I/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/WebKitAdditions -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator14.5.sdk/usr/local/include/WebKitAdditions -I/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/webrtc -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator14.5.sdk/usr/local/include/webrtc -I/Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/Source/WebKit -DNDEBUG -DENABLE_EXPERIMENTAL_FEATURES -DHAVE_CORE_PREDICTION -DENABLE_LOWER_FORMATREADERBUNDLE_CODESIGNING_REQUIREMENTS -DFRAMEWORK_NAME=WebKit -x objective-c++ -std=gnu++1z -fno-rtti -DRELEASE_WITHOUT_OPTIMIZATIONS -reexport_install_name /System/Library/PrivateFrameworks/WebKitLegacy.framework/WebKitLegacy -extra-private-header /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/Source/WebKit/Platform/ExtraPrivateSymbolsForTAPI.h -extra-public-header /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/Source/WebKit/Platform/ExtraPublicSymbolsForTAPI.h -exclude-private-header /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/WebKit.framework/PrivateHeaders/NSURLDownloadSPI.h /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator /WebKit.framework -o /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/WebKit.framework/WebKit.tbd warning: reexport_install_name is deprecated, use reexport_framework reexport_l or reexport_library error: headers don't have symbol '__ZN6WebKit11TextChecker33setContinuousSpellCheckingEnabledEb'
Michael Catanzaro
Comment 6 2021-10-08 09:04:19 PDT
Comment on attachment 440610 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=440610&action=review > Source/WebKit/UIProcess/TextChecker.h:31 > +#include <WebKit/WKDeclarationSpecifiers.h> Should be: #include "WKDeclarationSpecifiers.h" That said, I doubt that would make any difference for the build failure.
Michael Catanzaro
Comment 7 2021-10-08 09:06:03 PDT
(In reply to Michael Catanzaro from comment #5) > error: headers don't have symbol > '__ZN6WebKit11TextChecker33setContinuousSpellCheckingEnabledEb' Maybe it's checking to ensure no functions are exported except those declared in public headers? That is pretty strict....
Philippe Normand
Comment 8 2021-10-08 09:12:48 PDT
(In reply to Michael Catanzaro from comment #3) > commit-queue would be a lot more useful if it actually failed when the build > is broken. :( Yeah, what happened? I'm confused, if this broke some apple builds why did the patch land?
Michael Catanzaro
Comment 9 2021-10-08 09:23:00 PDT
commit-queue does not wait for the EWS builders, that's what happened.
Note You need to log in before you can comment on or make changes to this bug.