Source/WebKit/UIProcess/TextChecker.h
@@ -28,6 +28,7 @@
 #include "TextCheckerCompletion.h"
 #include <WebCore/EditorClient.h>
 #include <WebCore/TextCheckerClient.h>
+#include <WebKit/WKDeclarationSpecifiers.h>
 
 namespace WebKit {
 
@@ -41,7 +42,7 @@ public:
     static const TextCheckerState& state();
     static bool isContinuousSpellCheckingAllowed();
 
-    static bool setContinuousSpellCheckingEnabled(bool);
+    WK_EXPORT static bool setContinuousSpellCheckingEnabled(bool);
     static void setGrammarCheckingEnabled(bool);
     
     static void setTestingMode(bool);
